<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/main">

    <TextView
        android:id="@+id/recommendation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="#000"
        android:text="@string/recommendation"
        android:fontFamily="@font/marck_script_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnToSocials"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:background="@drawable/button_main"
            android:fontFamily="@font/pacifico_regular"
            android:textSize="10sp"
            android:text="@string/share"/>

        <Button
            android:id="@+id/btnToTable"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:background="@drawable/button_main"
            android:fontFamily="@font/pacifico_regular"
            android:textSize="14sp"
            android:text="@string/table"/>

        <Button
            android:id="@+id/btnToTests"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:background="@drawable/button_main"
            android:fontFamily="@font/pacifico_regular"
            android:textSize="14sp"
            android:text="@string/tests"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>