<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:id="@+id/table1"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_weight="10"
                android:text="@string/common_info"
                android:gravity="center"
                android:textSize="25sp"
                android:textColor="#000"
                android:fontFamily="@font/alice_regular"/>
            <ImageView
                android:layout_weight="1"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@mipmap/table1"/>
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#33000000"/>
        <LinearLayout
            android:id="@+id/table2"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_weight="10"
                android:text="@string/assimilated"
                android:gravity="center"
                android:textSize="25sp"
                android:textColor="#000"
                android:fontFamily="@font/alice_regular"/>
            <ImageView
                android:layout_weight="1"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@mipmap/table2"/>
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#33000000"/>
        <LinearLayout
            android:id="@+id/table3"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_weight="10"
                android:text="@string/hollow"
                android:gravity="center"
                android:textSize="25sp"
                android:textColor="#000"
                android:fontFamily="@font/alice_regular"/>
            <ImageView
                android:layout_weight="1"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@mipmap/table3"/>
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#33000000"/>
        <LinearLayout
            android:id="@+id/table4"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_weight="10"
                android:text="@string/defective"
                android:gravity="center"
                android:textSize="25sp"
                android:textColor="#000"
                android:fontFamily="@font/alice_regular"/>
            <ImageView
                android:layout_weight="1"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@mipmap/table4"/>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#33000000"/>


        <LinearLayout
            android:id="@+id/table5"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_weight="10"
                android:text="@string/defective_final"
                android:gravity="center"
                android:textSize="25sp"
                android:textColor="#000"
                android:fontFamily="@font/alice_regular"/>
            <ImageView
                android:layout_weight="1"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@mipmap/table5"/>
        </LinearLayout>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#33000000"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/tables_bottom"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>