<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <include layout="@layout/item_test"
        android:id="@+id/vItemRow"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.github.aakira.expandablelayout.ExpandableLinearLayout
        android:id="@+id/expandableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/vItemRow"
        app:ael_duration="400"
        app:ael_expanded="true"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/frPastTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="60dp">

                <com.apakhun.arabicverbstestssecond.views.ProgressPieChart
                    android:id="@+id/piePastChart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:text="@string/past_time"
                    android:textColor="@color/colorDarkBlue"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/piePastChart"
                    app:layout_constraintStart_toEndOf="@+id/piePastChart"
                    app:layout_constraintTop_toTopOf="@+id/piePastChart" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frPresentTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="60dp">

                <com.apakhun.arabicverbstestssecond.views.ProgressPieChart
                    android:id="@+id/piePresentChart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:text="@string/present_time"
                    android:textColor="@color/colorDarkBlue"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/piePresentChart"
                    app:layout_constraintStart_toEndOf="@+id/piePresentChart"
                    app:layout_constraintTop_toTopOf="@+id/piePresentChart" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frFutureTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="60dp">

                <com.apakhun.arabicverbstestssecond.views.ProgressPieChart
                    android:id="@+id/pieFutureChart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:text="@string/future_time"
                    android:textColor="@color/colorDarkBlue"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/pieFutureChart"
                    app:layout_constraintStart_toEndOf="@+id/pieFutureChart"
                    app:layout_constraintTop_toTopOf="@+id/pieFutureChart" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>


    </com.github.aakira.expandablelayout.ExpandableLinearLayout>
</RelativeLayout>